[package]
name = "fdn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio = "0.2.0-alpha.3"
baseplug = { git = "https://github.com/BillyDM/baseplug.git", branch = "trunk" }
baseview = { git = "https://github.com/BillyDM/baseview.git" }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
