[package]
name = "fdn"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
audio = "0.2.0-alpha.3"
baseplug = { git = "https://github.com/BillyDM/baseplug.git", branch = "trunk" }
baseview = { git = "https://github.com/BillyDM/baseview.git" }
num-traits = "0.2"
nalgebra = "0.29"
serde = { version = "1", features = ["derive"] }
